Advance Controls: Give warning about wake up HAX
Signed-off-by: Ali Hasan <ahb7671@gmail.com>

--- a/AdvancedControls/res/values/strings.xml
+++ b/AdvancedControls/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="kcal_presets_title">Use kcal preset values</string>
     <string name="presets_list_title">Choose kcal preset</string>
     <string name="slow_wakeup_fix_title">Enable hack to improve wakeup speed</string>
-    <string name="slow_wakeup_fix_summary">Experimental feature, use at your own risk</string>
+    <string name="slow_wakeup_fix_summary">Experimental, makes UI unresponsive.</string>
     <string name="category_sound">Sound</string>
     <string name="category_misc">Misc</string>
     <string name="dirac_title">Dirac Settings</string>
